# gaggiuino_api

./: .aiignore  .pre-commit-config.yaml  AGENTS.md  Justfile  README.md  TODO.md  pyproject.toml  tox.ini
.github/templates/: release_template.md
.github/workflows/: checks.yml  release_draft.yml
.junie/: guidelines.md
.run/: pytest REAL.run.xml  pytest.run.xml
gaggiuino/: api.py  const.py  models.py
gaggiuino_api/: api.py  models.py
script/: build.cmd  publish.cmd  publish_test.cmd
src/gaggiuino_api/: __init__.py  api.py  const.py  exceptions.py  models.py  tools.py
test/: conftest.py  test_integration.py  test_profiles.py  test_settings.py  test_shots.py  test_suite.py  test_system.py
