[project]
name = "gaggiuino_api"
version = "0.1.12"
description = "Gaggiuino REST Api Wrapper"
readme = "README.md"
authors = [
    { name = "Alexey ALERT Rubashёff", email = "alexey.rubasheff@gmail.com" }
]
requires-python = "==3.13.*"
dependencies = [
    "aiohttp",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pre-commit-uv>=4.1.4",
    "pytest>=8.4.1", # update this in tox.ini
    "pytest-asyncio>=1.1.0", # update this in tox.ini
    "ruff>=0.12.9", # update this in tox.ini
    "tox>=4.28.4", # update this in tox.ini
]

[tool.ruff]
src = ["src", "test"]
extend-exclude = [
    ".idea/",
    "script/",
    "dist",
    "images",
    ".tox",
    ".venv",
]
extend-include = []
output-format = "grouped"
respect-gitignore = true

[tool.ruff.lint]
task-tags = ["TODO"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88
quote-style = "preserve"

[tool.ruff.lint.pycodestyle]
max-doc-length = 88
max-line-length = 120

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 15
max-nested-blocks = 10
max-positional-args = 3
max-public-methods = 30

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["E402"]

[tool.pytest.ini_options]
minversion = "8.4.1"
addopts = "-ra -q"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
